--- a/tex/MICM.tex
+++ b/tex/MICM.tex
@@ -108,13 +108,13 @@ Library}
 
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=0.4]{/Users/fillmore/Plots/carbonate_speciation.pdf}
+\includegraphics[scale=0.4]{../plots/carbonate_speciation.pdf}
 \end{figure}
 \end{frame}
 
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=0.4]{/Users/fillmore/Plots/pH_vs_CO2_concentration.pdf}
+\includegraphics[scale=0.4]{../plots/pH_vs_CO2_concentration.pdf}
 \end{figure}
 \end{frame}
 
@@ -145,7 +145,7 @@ Library}
 
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=0.35]{/Users/fillmore/Plots/dae_system.pdf}
+\includegraphics[scale=0.35]{../plots/dae_system.pdf}
 \end{figure}
 \end{frame}
 
