Changed section titles.

--- a/tex/MICM.tex
+++ b/tex/MICM.tex
@@ -42,9 +42,14 @@ Library}
 
 \frame{\titlepage}
 
+\begin{frame}
+\begin{exampleblock}{MICM Development Cases}
+
+\end{exampleblock}
+\end{frame}
+
 \section{Chapman ODE Example}
 
-\subsection{Chapman Mechanism}
 \begin{frame}
 \frametitle{Chapman Mechanism}
 \include{chapman}
@@ -60,7 +65,7 @@ Library}
 \include{chapman_3d_2d}
 \end{frame}
 
-\subsection{MICM Interface}
+\section{MICM Interface}
 \begin{frame}
 \include{chapman_config_photo}
 \end{frame}
@@ -73,7 +78,7 @@ Library}
 \include{chapman_python}
 \end{frame}
 
-\subsection{Phase Portraits}
+\section{Phase Portraits}
 \begin{frame}
 \include{linear_nonlinear}
 \end{frame}
@@ -92,7 +97,7 @@ Library}
 
 \section{Carbonic Acid DAE Example}
 
-\subsection{Aqueous Chemistry}
+\section{Aqueous Chemistry}
 
 \begin{frame}
 \include{carbonic_equilibrium_reactions}
@@ -149,11 +154,9 @@ Library}
 \end{figure}
 \end{frame}
 
-\subsection{MICM Interface}
+\section{Backward Euler Solver}
 
-\section{MICM Backward Euler Solver}
-
-\section{MICM Rosenbrock Solver}
+\section{Rosenbrock Solver}
 
 \nocite{SanduI}
 \nocite{SanduII}
