--- a/tex/MICM.tex
+++ b/tex/MICM.tex
@@ -44,7 +44,14 @@ Library}
 
 \begin{frame}
 \begin{exampleblock}{MICM Development Cases}
-
+\begin{itemize}
+\item 3D Gas Phase Chapman ODE \footnote{Ordinary Differential Equations}
+$\mathrm{O}, \mathrm{O_2}, \mathrm{O_3}$
+\item 4D Aqueous Phase Carbonic Acid DAE \footnote{Differential Algebraic Equations} System
+$\mathrm{CO_2(aq)}, \mathrm{H CO_3^-}, \mathrm{CO_3^{2-}, \mathrm{H}^+}$
+\item Algebraic Equilibrium Solutions
+\item Time Evolving Solutions with Algebraic Constraints
+\end{itemize}
 \end{exampleblock}
 \end{frame}
 
